--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header .btn {
 
 .main {
   width: 100%;
-  background-image: url(../material/assets/images/hero-image.jpg);
+  background-image: url(./material/assets/images/hero-image.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   padding: 2em 0;
