--- a/style.css
+++ b/style.css
@@ -24,10 +24,13 @@ header ul {
   margin: 0;
   padding: 0;
 }
-
+header .navbar-nav {
+  padding-left: 5em;
+}
 header li {
   list-style-type: none;
-  margin: 0 1.5em;
+  margin: 0 1em;
+  font-size: 14px;
 }
 
 header span {
@@ -54,7 +57,7 @@ header .btn {
 
 .main {
   width: 100%;
-  background-image: url(./material/assets/images/hero-image.jpg);
+  background-image: url(../material/assets/images/hero-image.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   padding: 2em 0;
@@ -109,20 +112,23 @@ header .btn {
 
 .hr {
   width: 100px;
-  background-color: #261362;
+  background-color: #8167e6;
   height: 2px;
   margin: 2em auto;
 }
 
 .icon {
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
+  border: none;
   border-radius: 50%;
+  box-shadow: 10px 10px 25px -5px #8167e6;
   background-color: #8167e6;
+  margin-right: 11em;
 }
 
 .icon i {
-  font-size: 25px;
+  font-size: 32px;
   color: white;
 }
 .icon .desc {
@@ -205,47 +211,47 @@ header .btn {
   margin: 2em 0 1.5em;
 }
 
-.footer {
+footer {
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   padding-bottom: 3em;
 }
 
-.footer .logo h4 {
+footer .logo h4 {
   font-weight: 32px;
   font-weight: 700;
 }
-.footer p.title {
+footer p.title {
   font-weight: bold;
   color: black;
 }
-.footer p,
-.footer a {
+footer p,
+footer a {
   color: #6e6e6e;
   font-size: 14px;
 }
-.footer ul {
+footer ul {
   padding: 0;
 }
-.footer li:first-child {
+footer li:first-child {
   margin-top: 2em;
 }
-.footer li {
+footer li {
   list-style-type: none;
   margin: 1em 0;
 }
 
-.footer input {
+footer input {
   width: 100%;
   border-radius: 25px;
   border: 1px solid #261362;
   padding: 3px 15px;
   box-sizing: border-box;
 }
-.footer form {
+footer form {
   position: relative;
 }
-.footer button {
+footer button {
   position: absolute;
   padding: 3px 2.5em;
   border-top-right-radius: 25px;
@@ -256,7 +262,7 @@ header .btn {
   background-color: #8167e6;
   color: white;
 }
-.footer p.small {
+footer p.small {
   font-size: 12px;
 }
 .btn.overlay {
@@ -274,12 +280,30 @@ header .btn {
   box-shadow: none;
   border: none;
 }
+
+.slide {
+  display: none;
+}
+
+.carousel-indicators {
+  bottom: -3em;
+}
+.carousel-indicators [data-bs-target] {
+  background-color: #8167e6;
+}
+
 @media screen and (max-width: 670px) {
   header .navbar .btn {
     margin-top: 2em;
   }
   header .navbar ul {
     margin-top: 1em;
+  }
+  .slide {
+    display: block;
+  }
+  .feature .row {
+    display: none;
   }
 }
 
@@ -294,6 +318,10 @@ header .btn {
     width: 70%;
   }
 
+  header .navbar-nav {
+    padding-left: 0;
+  }
+
   img.app-store,
   img.play-store {
     width: 40%;
@@ -305,27 +333,34 @@ header .btn {
     margin-bottom: 1em;
   }
 }
-@media (max-width: 765px), (min-width: 650px) {
+@media (max-width: 765px) {
   .banner .col-md-3 {
     margin-bottom: 2em;
+  }
+  .banner .col-md-3:last-child {
+    margin-bottom: 0;
   }
 }
 @media (max-width: 768px) {
   .download {
     padding-top: 2em;
   }
-  .footer .logo {
+  footer .logo {
     margin-bottom: 2em;
   }
-  .footer li:first-child {
+  footer li:first-child {
     margin-top: 10px;
   }
-  .footer p {
+  footer p {
     margin-top: 1em;
+  }
+  .profile .img {
+    display: flex;
+    justify-content: center;
   }
 }
 @media (max-width: 990px), (min-width: 768px) {
-  .footer input::placeholder {
+  footer input::placeholder {
     font-size: 12px;
   }
 }
